--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       
 
-        <footer class="footer">
+        <footer class="footer" style="margin-top: 300px;" >
           <p>
               <img id="arrows" src="img/expand.svg" alt="expand"> 
               <input class="main__button7 button" id="button" type="button" value="Скрыть">
