--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p>РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</p>
         </header>
         <div class="swiper mySwiper" style="margin-top: 20px;">
-            <div class="swiper-wrapper" >
+            <div  id="block-wrapper" class="swiper-wrapper" >
                 <div id="slide" class="swiper-slide"><img src="img/lenogo.svg"></div>
                 <div class="swiper-slide"><img src="img/samsung.svg"></div>
                 <div class="swiper-slide"><img src="img/apple.svg"></div>
